update og-image link

--- a/nobody-knows/public/index.html
+++ b/nobody-knows/public/index.html
@@ -60,7 +60,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://zayland-assets.s3.amazonaws.com/images/og-image.jpg"
+      content="https://zayland-assets.s3.amazonaws.com/images/BG-min.jpg"
     />
     <meta name="twitter:domain" content="https://www.zaylandxx.com/" />
     <meta
