--- a/nobody-knows/public/index.html
+++ b/nobody-knows/public/index.html
@@ -38,7 +38,10 @@
     />
     <meta name="msapplication-TileColor" content="#000000" />
     <meta name="theme-color" content="#ffffff" />
-    <meta property="og:image" content="%PUBLIC_URL%/favicon_io/og-image.jpg" />
+    <meta
+      property="og:image"
+      content="https://zayland-assets.s3.amazonaws.com/images/BG-min.jpg"
+    />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="628" />
     <meta
