--- a/nobody-knows/public/index.html
+++ b/nobody-knows/public/index.html
@@ -40,30 +40,21 @@
     <meta name="theme-color" content="#ffffff" />
     <meta
       property="og:image"
-      content="https://zayland-assets.s3.amazonaws.com/images/BG-min.jpg"
+      content="https://zayland-assets.s3.amazonaws.com/images/letsGoCover_sm0.jpg"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="628" />
-    <meta
-      property="og:title"
-      content="Zayland | Nobody Knows, The Remixes OUT NOW!"
-    />
-    <meta
-      property="og:description"
-      content="Zayland | Nobody Knows, The Remixes OUT NOW!"
-    />
+    <meta property="og:title" content="Zayland | Let's Go – OUT NOW" />
+    <meta property="og:description" content="Zayland | Let's Go – OUT NOW" />
     <meta property="og:url" content="https://www.zaylandxx.com/" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@zaylandxx" />
     <meta name="twitter:creator" content="@zaylandxx" />
     <meta name="twitter:title" content="Zayland" />
-    <meta
-      name="twitter:description"
-      content="Zayland | Nobody Knows, The Remixes OUT NOW!"
-    />
+    <meta name="twitter:description" content="Zayland | Let's Go – OUT NOW" />
     <meta
       name="twitter:image"
-      content="https://zayland-assets.s3.amazonaws.com/images/BG-min.jpg"
+      content="https://zayland-assets.s3.amazonaws.com/images/letsGoCover_sm0.jpg"
     />
     <meta name="twitter:domain" content="https://www.zaylandxx.com/" />
     <meta
