Update page title

--- a/nobody-knows/public/index.html
+++ b/nobody-knows/public/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon_io/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Zayland | Nobody Knows, The Remixes OUT NOW!"
-    />
+    <meta name="description" content="Zayland | 500 Degrees - OUT NOW" />
     <meta
       name="keywords"
       content="music, independent artist, the nu wave SOUND, rap, r&b, Texas Music, texas music"
