Update add the artist page links

--- a/nobody-knows/public/index.html
+++ b/nobody-knows/public/index.html
@@ -37,7 +37,7 @@
     <meta name="theme-color" content="#ffffff" />
     <meta
       property="og:image"
-      content="https://zayland-assets.s3.amazonaws.com/images/stThomas.jpeg"
+      content="https://zayland-assets.s3.amazonaws.com/images/stThomas.jpg"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="628" />
@@ -51,7 +51,7 @@
     <meta name="twitter:description" content="Zayland | St. Thomas – OUT NOW" />
     <meta
       name="twitter:image"
-      content="https://zayland-assets.s3.amazonaws.com/images/500.jpeg"
+      content="https://zayland-assets.s3.amazonaws.com/images/stThomas.jpg"
     />
     <meta name="twitter:domain" content="https://www.zaylandxx.com/" />
     <meta
