--- a/nobody-knows/public/index.html
+++ b/nobody-knows/public/index.html
@@ -5,7 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon_io/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Zayland | St. Thomas - OUT NOW" />
+    <meta
+      name="description"
+      content="Zayland | From Texas, With Love - OUT NOW"
+    />
     <meta
       name="keywords"
       content="music, independent artist, the nu wave SOUND, rap, r&b, Texas Music, texas music"
@@ -41,14 +44,23 @@
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="628" />
-    <meta property="og:title" content="Zayland | St. Thomas – OUT NOW" />
-    <meta property="og:description" content="Zayland | St. Thomas – OUT NOW" />
+    <meta
+      property="og:title"
+      content="Zayland | From Texas, With Love – OUT NOW"
+    />
+    <meta
+      property="og:description"
+      content="Zayland | From Texas, With Love – OUT NOW"
+    />
     <meta property="og:url" content="https://www.zaylandxx.com/" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@zaylandxx" />
     <meta name="twitter:creator" content="@zaylandxx" />
     <meta name="twitter:title" content="Zayland" />
-    <meta name="twitter:description" content="Zayland | St. Thomas – OUT NOW" />
+    <meta
+      name="twitter:description"
+      content="Zayland | From Texas, With Love – OUT NOW"
+    />
     <meta
       name="twitter:image"
       content="https://zayland-assets.s3.amazonaws.com/images/FTWL.jpg"
@@ -73,7 +85,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Zayland | St. Thomas OUT NOW</title>
+    <title>Zayland | From Texas, With Love OUT NOW</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
