--- a/ftwl/public/index.html
+++ b/ftwl/public/index.html
@@ -2,14 +2,75 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon_io/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Zayland | From Texas, With Love - OUT NOW"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta
+      name="keywords"
+      content="music, independent artist, the nu wave SOUND, rap, r&b, Texas Music, texas music"
+    />
+    <meta name="author" content="The NU Wave Sound c/o Gideon Ibemere, Jr" />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="%PUBLIC_URL%/favicon_io/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="%PUBLIC_URL%/favicon_io/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="%PUBLIC_URL%/favicon_io/favicon-16x16.png"
+    />
+    <link
+      rel="shortcut icon"
+      href="%PUBLIC_URL%/favicon_io/favicon.ico"
+      type="image/x-icon"
+    />
+    <meta name="msapplication-TileColor" content="#000000" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta
+      property="og:image"
+      content="https://zayland-assets.s3.amazonaws.com/images/FTWL.jpg"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="628" />
+    <meta
+      property="og:title"
+      content="Zayland | From Texas, With Love – OUT NOW"
+    />
+    <meta
+      property="og:description"
+      content="Zayland | From Texas, With Love – OUT NOW"
+    />
+    <meta property="og:url" content="https://www.zaylandxx.com/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@zaylandxx" />
+    <meta name="twitter:creator" content="@zaylandxx" />
+    <meta name="twitter:title" content="Zayland" />
+    <meta
+      name="twitter:description"
+      content="Zayland | From Texas, With Love – OUT NOW"
+    />
+    <meta
+      name="twitter:image"
+      content="https://zayland-assets.s3.amazonaws.com/images/FTWL.jpg"
+    />
+    <meta name="twitter:domain" content="https://www.zaylandxx.com/" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1,shrink-to-fit=no"
+    />
+    <meta name="theme-color" content="#000000" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +85,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Zayland | From Texas, With Love OUT NOW</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
