Update meta data

--- a/nobody-knows-shop/public/index.html
+++ b/nobody-knows-shop/public/index.html
@@ -5,7 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon_io/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Zayland Shop | Nobody Knows Out Now!" />
+    <meta
+      name="description"
+      content="Zayland Shop | From Texas, With Love - OUT NOW"
+    />
     <meta
       name="keywords"
       content="music, independent artist, the nu wave SOUND, rap, r&b, Texas Music, texas music"
@@ -35,13 +38,19 @@
     />
     <meta name="msapplication-TileColor" content="#000000" />
     <meta name="theme-color" content="#ffffff" />
-    <meta property="og:image" content="%PUBLIC_URL%/favicon_io/og-image.jpg" />
+    <meta
+      property="og:image"
+      content="https://zayland-assets.s3.amazonaws.com/images/FTWL.jpg"
+    />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="628" />
-    <meta property="og:title" content="Zayland Shop | Nobody Knows Out Now!" />
+    <meta
+      property="og:title"
+      content="Zayland Shop | From Texas, With Love - OUT NOW"
+    />
     <meta
       property="og:description"
-      content="Zayland Shop | Nobody Knows Out Now!"
+      content="Zayland Shop | From Texas, With Love - OUT NOW"
     />
     <meta property="og:url" content="https://shop.zaylandxx.com/" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -50,11 +59,11 @@
     <meta name="twitter:title" content="Zayland" />
     <meta
       name="twitter:description"
-      content="Zayland Shop | Nobody Knows Out Now!"
+      content="Zayland Shop | From Texas, With Love - OUT NOW"
     />
     <meta
       name="twitter:image"
-      content="https://zayland-assets.s3.amazonaws.com/images/og-image.jpg"
+      content="https://zayland-assets.s3.amazonaws.com/images/FTWL.jpg"
     />
     <meta name="twitter:domain" content="https://shop.zaylandxx.com/" />
     <meta
