--- a/nobody-knows-shop/public/index.html
+++ b/nobody-knows-shop/public/index.html
@@ -85,7 +85,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Zayland Shop | NOBODY KNOWS OUT NOW</title>
+    <title>Zayland Shop | From Texas, With Love - OUT NOW</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
