--- a/nobody-knows/public/index.html
+++ b/nobody-knows/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Zayland | From Texas, With Love - OUT NOW"
+      content="Zayland | Get Away - OUT NOW"
     />
     <meta
       name="keywords"
@@ -40,17 +40,17 @@
     <meta name="theme-color" content="#ffffff" />
     <meta
       property="og:image"
-      content="https://zayland-assets.s3.amazonaws.com/images/FTWL.jpg"
+      content="https://imgur.com/LRfH4Hv.jpg"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="628" />
     <meta
       property="og:title"
-      content="Zayland | From Texas, With Love – OUT NOW"
+      content="Zayland | Get Away – OUT NOW"
     />
     <meta
       property="og:description"
-      content="Zayland | From Texas, With Love – OUT NOW"
+      content="Zayland | Get Away – OUT NOW"
     />
     <meta property="og:url" content="https://www.zaylandxx.com/" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -59,11 +59,11 @@
     <meta name="twitter:title" content="Zayland" />
     <meta
       name="twitter:description"
-      content="Zayland | From Texas, With Love – OUT NOW"
+      content="Zayland | Get Away – OUT NOW"
     />
     <meta
       name="twitter:image"
-      content="https://zayland-assets.s3.amazonaws.com/images/FTWL.jpg"
+      content="https://imgur.com/LRfH4Hv.jpg"
     />
     <meta name="twitter:domain" content="https://www.zaylandxx.com/" />
     <meta
@@ -85,7 +85,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Zayland | From Texas, With Love OUT NOW</title>
+    <title>Zayland | Get Away OUT NOW</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
