--- a/nobody-knows/public/index.html
+++ b/nobody-knows/public/index.html
@@ -1,82 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon_io/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Zayland | Get Away - OUT NOW"
-    />
-    <meta
-      name="keywords"
-      content="music, independent artist, the nu wave SOUND, rap, r&b, Texas Music, texas music"
-    />
-    <meta name="author" content="The NU Wave Sound c/o Gideon Ibemere, Jr" />
-    <link
-      rel="apple-touch-icon"
-      sizes="120x120"
-      href="%PUBLIC_URL%/favicon_io/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="%PUBLIC_URL%/favicon_io/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="%PUBLIC_URL%/favicon_io/favicon-16x16.png"
-    />
-    <link
-      rel="shortcut icon"
-      href="%PUBLIC_URL%/favicon_io/favicon.ico"
-      type="image/x-icon"
-    />
-    <meta name="msapplication-TileColor" content="#000000" />
-    <meta name="theme-color" content="#ffffff" />
-    <meta
-      property="og:image"
-      content="https://imgur.com/LRfH4Hv.jpg"
-    />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="628" />
-    <meta
-      property="og:title"
-      content="Zayland | Get Away – OUT NOW"
-    />
-    <meta
-      property="og:description"
-      content="Zayland | Get Away – OUT NOW"
-    />
-    <meta property="og:url" content="https://www.zaylandxx.com/" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@zaylandxx" />
-    <meta name="twitter:creator" content="@zaylandxx" />
-    <meta name="twitter:title" content="Zayland" />
-    <meta
-      name="twitter:description"
-      content="Zayland | Get Away – OUT NOW"
-    />
-    <meta
-      name="twitter:image"
-      content="https://imgur.com/LRfH4Hv.jpg"
-    />
-    <meta name="twitter:domain" content="https://www.zaylandxx.com/" />
-    <meta
-      name="viewport"
-      content="width=device-width,initial-scale=1,shrink-to-fit=no"
-    />
-    <meta name="theme-color" content="#000000" />
-    <!--
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" href="%PUBLIC_URL%/favicon_io/favicon.ico" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="theme-color" content="#000000" />
+		<meta
+			name="description"
+			content="The Nu Wave: in Dallas, With Love -- Get Tickets NOW!"
+		/>
+		<meta
+			name="keywords"
+			content="music, independent artist, the nu wave SOUND, rap, r&b, Texas Music, texas music"
+		/>
+		<meta name="author" content="The NU Wave Sound c/o Gideon Ibemere, Jr" />
+		<link
+			rel="apple-touch-icon"
+			sizes="120x120"
+			href="%PUBLIC_URL%/favicon_io/apple-touch-icon.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="%PUBLIC_URL%/favicon_io/favicon-32x32.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="%PUBLIC_URL%/favicon_io/favicon-16x16.png"
+		/>
+		<link
+			rel="shortcut icon"
+			href="%PUBLIC_URL%/favicon_io/favicon.ico"
+			type="image/x-icon"
+		/>
+		<meta name="msapplication-TileColor" content="#000000" />
+		<meta name="theme-color" content="#ffffff" />
+		<meta property="og:image" content="https://imgur.com/3sfcMUK.jpg" />
+
+		<meta
+			property="og:title"
+			content="Zayland | The Nu Wave: in Dallas, With Love -- Get Tickets NOW!"
+		/>
+		<meta
+			property="og:description"
+			content="Zayland | The Nu Wave: in Dallas, With Love -- Get Tickets NOW!"
+		/>
+		<meta property="og:url" content="https://www.zaylandxx.com/" />
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:site" content="@zaylandxx" />
+		<meta name="twitter:creator" content="@zaylandxx" />
+		<meta name="twitter:title" content="Zayland" />
+		<meta
+			name="twitter:description"
+			content="The Nu Wave: in Dallas, With Love -- Get Tickets NOW!"
+		/>
+		<meta name="twitter:image" content="https://imgur.com/LRfH4Hv.jpg" />
+		<meta name="twitter:domain" content="https://www.zaylandxx.com/" />
+		<meta
+			name="viewport"
+			content="width=device-width,initial-scale=1,shrink-to-fit=no"
+		/>
+		<meta name="theme-color" content="#000000" />
+		<!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -85,12 +78,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Zayland | Get Away OUT NOW</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+		<title>
+			Zayland | The Nu Wave: in Dallas, With Love -- Get Tickets NOW!
+		</title>
+	</head>
+	<body>
+		<noscript>You need to enable JavaScript to run this app.</noscript>
+		<div id="root"></div>
+		<!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -100,5 +95,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+	</body>
 </html>
