chore: updates metadata

--- a/nobody-knows/public/index.html
+++ b/nobody-knows/public/index.html
@@ -5,10 +5,7 @@
 		<link rel="icon" href="%PUBLIC_URL%/favicon_io/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta
-			name="description"
-			content="The Nu Wave: in Dallas, With Love -- Get Tickets NOW!"
-		/>
+		<meta name="description" content="Register for an unreleased demo!" />
 		<meta
 			name="keywords"
 			content="music, independent artist, the nu wave SOUND, rap, r&b, Texas Music, texas music"
@@ -38,15 +35,18 @@
 		/>
 		<meta name="msapplication-TileColor" content="#000000" />
 		<meta name="theme-color" content="#ffffff" />
-		<meta property="og:image" content="https://imgur.com/3sfcMUK.jpg" />
+		<meta
+			property="og:image"
+			content="https://zayland-uploads.s3.amazonaws.com/Screen_Shot_2021_03_30_at_1_49_29_PM_c7d4d7de4c.png"
+		/>
 
 		<meta
 			property="og:title"
-			content="Zayland | The Nu Wave: in Dallas, With Love -- Get Tickets NOW!"
+			content="Zayland | Register for an unreleased demo!"
 		/>
 		<meta
 			property="og:description"
-			content="Zayland | The Nu Wave: in Dallas, With Love -- Get Tickets NOW!"
+			content="Zayland | Register for an unreleased demo!"
 		/>
 		<meta property="og:url" content="https://www.zaylandxx.com/" />
 		<meta name="twitter:card" content="summary_large_image" />
@@ -55,9 +55,12 @@
 		<meta name="twitter:title" content="Zayland" />
 		<meta
 			name="twitter:description"
-			content="The Nu Wave: in Dallas, With Love -- Get Tickets NOW!"
+			content="Register for an unreleased demo!"
 		/>
-		<meta name="twitter:image" content="https://imgur.com/LRfH4Hv.jpg" />
+		<meta
+			name="twitter:image"
+			content="https://zayland-uploads.s3.amazonaws.com/Screen_Shot_2021_03_30_at_1_49_29_PM_c7d4d7de4c.png"
+		/>
 		<meta name="twitter:domain" content="https://www.zaylandxx.com/" />
 		<meta
 			name="viewport"
@@ -78,9 +81,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-		<title>
-			Zayland | The Nu Wave: in Dallas, With Love -- Get Tickets NOW!
-		</title>
+		<title>Zayland | Register for an unreleased demo!</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
