--- a/nobody-knows/public/index.html
+++ b/nobody-knows/public/index.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="%PUBLIC_URL%/favicon_io/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta name="description" content="Register for an unreleased demo!" />
+		<meta name="description" content="From Zayland, With Love" />
 		<meta
 			name="keywords"
 			content="music, independent artist, the nu wave SOUND, rap, r&b, Texas Music, texas music"
@@ -40,23 +40,14 @@
 			content="https://zayland-uploads.s3.amazonaws.com/Screen_Shot_2021_03_30_at_1_49_29_PM_c7d4d7de4c.png"
 		/>
 
-		<meta
-			property="og:title"
-			content="Zayland | Register for an unreleased demo!"
-		/>
-		<meta
-			property="og:description"
-			content="Zayland | Register for an unreleased demo!"
-		/>
+		<meta property="og:title" content="Zayland | From Zayland, With Love" />
+		<meta property="og:description" content="From Zayland, With Love" />
 		<meta property="og:url" content="https://www.zaylandxx.com/" />
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:site" content="@zaylandxx" />
 		<meta name="twitter:creator" content="@zaylandxx" />
-		<meta name="twitter:title" content="Zayland" />
-		<meta
-			name="twitter:description"
-			content="Register for an unreleased demo!"
-		/>
+		<meta name="twitter:title" content="Zayland | From Zayland, With Love" />
+		<meta name="twitter:description" content="From Zayland, With Love" />
 		<meta
 			name="twitter:image"
 			content="https://zayland-uploads.s3.amazonaws.com/Screen_Shot_2021_03_30_at_1_49_29_PM_c7d4d7de4c.png"
@@ -81,7 +72,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-		<title>Zayland | Register for an unreleased demo!</title>
+		<title>Zayland | From Zayland, With Love</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
