--- a/nobody-knows/public/index.html
+++ b/nobody-knows/public/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=G-V24P36JNLX"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag("js", new Date());
+
+			gtag("config", "G-V24P36JNLX");
+		</script>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%PUBLIC_URL%/favicon_io/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta name="description" content="From Zayland, With Love" />
+		<meta name="description" content="i can't feel Out Now!" />
 		<meta
 			name="keywords"
 			content="music, independent artist, the nu wave SOUND, rap, r&b, Texas Music, texas music"
@@ -37,20 +51,20 @@
 		<meta name="theme-color" content="#ffffff" />
 		<meta
 			property="og:image"
-			content="https://zayland-uploads.s3.amazonaws.com/Screen_Shot_2021_03_30_at_1_49_29_PM_c7d4d7de4c.png"
+			content="https://zayland-uploads.s3.amazonaws.com/IMG_1316_f827c0d252.png"
 		/>
 
-		<meta property="og:title" content="Zayland | From Zayland, With Love" />
-		<meta property="og:description" content="From Zayland, With Love" />
+		<meta property="og:title" content="Zayland | i can't feel Out Now!" />
+		<meta property="og:description" content="i can't feel Out Now!" />
 		<meta property="og:url" content="https://www.zaylandxx.com/" />
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:site" content="@zaylandxx" />
 		<meta name="twitter:creator" content="@zaylandxx" />
-		<meta name="twitter:title" content="Zayland | From Zayland, With Love" />
-		<meta name="twitter:description" content="From Zayland, With Love" />
+		<meta name="twitter:title" content="Zayland | i can't feel Out Now!" />
+		<meta name="twitter:description" content="i can't feel Out Now!" />
 		<meta
 			name="twitter:image"
-			content="https://zayland-uploads.s3.amazonaws.com/Screen_Shot_2021_03_30_at_1_49_29_PM_c7d4d7de4c.png"
+			content="https://zayland-uploads.s3.amazonaws.com/IMG_1316_f827c0d252.png"
 		/>
 		<meta name="twitter:domain" content="https://www.zaylandxx.com/" />
 		<meta
@@ -63,20 +77,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script
-			async
-			src="https://www.googletagmanager.com/gtag/js?id=G-V24P36JNLX"
-		></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag() {
-				dataLayer.push(arguments);
-			}
-			gtag("js", new Date());
 
-			gtag("config", "G-V24P36JNLX");
-		</script>
 		<!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
